0.56:
 * Added --author-time option (onlyJakob).
 * Request compatibility profile when creating OpenGL context.

0.55:
 * Fixed build with Boost 1.85.0 (cho-m).

0.54:
 * Added experimental support for Wayland (beroset).
 * Fixed building on Apple M1 by updating autoconf macros (Ckhardin).

0.53:
 * Added --high-dpi option.
 * Fixed various bugs with Retina displays on MacOS.
 * Fixed slider timestamp font not affected by --font-scale.
 * Fixed hovering over end of slider stopping time advancing.

0.52:
 * Support rendering at native resolution on Retina / Ultra HD displays.
 * Support ISO 8601 timestamp format.
 * Allow custom log and caption file timestamps to be strings.
 * Change regular expression library to PCRE2.
 * Fixed filenames not being affected by --font-scale (Carl Colena).
 * Fixed file key not being affected by --font-scale.
 * Added --file-idle-time-at-end option.
 * Added --fixed-user-size option.

0.51:
 * Fixed --font-file relative path handling.
 * Fixed a bug in resolving the repository root directory from a relative path.

0.50:
 * Right mouse button rotation now pivots around the camera.
 * Added --font-file option.
 * Added --enable-font-file option to configure.
 * Added --no-time-travel option (Lars Schmertmann).
 * Added --dir-name-position option (Lars Schmertmann).
 * Added --file-extension-fallback option (Lars Schmertmann).
 * Added --user-show-filter option (Victor Lopez).
 * Added --disable-input option (Joey Parrish).
 * Added --loop-delay-seconds option (Joey Parrish).
 * Added --font-scale option.
 * Added filename, dirname and user font size options (Carl Colena).
 * Added workaround for FFMpeg error parsing Gource PPM video output.
 * Fixed a bug in the Mercurial log parser that caused changes to be missed.
 * Fixed file removal being cancelled by an action with an earlier timestamp.
 * Fixed a bug in the log file format detection that could result in the wrong
   first entry being displayed for a custom log.